<?xml version="1.0"?>
<package format="2">
  <name>voxblox</name>
  <version>0.0.0</version>
  <description>Voxblox</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen3</depend>
  <!-- <depend>eigen_checks</depend> -->
  <depend>minkindr</depend>
  <!-- This is an OPTIONAL dep! Will use system library if not present. -->
  <depend>protobuf_catkin</depend>

  <!-- Removed the glog_catkin dependency -->
  <depend>glog</depend>  <!-- Add glog as a direct dependency -->
</package>

<!-- <?xml version="1.0"?>
<package format="2">
  <name>voxblox</name>
  <version>0.0.0</version>
  <description>Voxblox</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen3</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <depend>protobuf_catkin</depend>

</package> -->
